--- a/package.json
+++ b/package.json
@@ -14,15 +14,14 @@
   "keywords": [
     "github",
     "portfolio",
-    "resume",
-    "andrewborstein.com"
+    "resume"
   ],
   "author": "andrew borstein",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/andrewborstein/portfolio/issues"
+    "url": "https://github.com/phuicy/portfolio/issues"
   },
-  "homepage": "https://github.com/andrewborstein/portfolio",
+  "homepage": "https://github.com/phuicy/portfolio",
   "devDependencies": {
     "connect": "^3.6.6",
     "grunt": "^0.4.5",
